# memotrie-generic

./: README  memotrie-generic.cabal
src/Data/MemoTrie/: Generic.hs
test/: Test.hs
